# cloudkafka-producer/src/main/java/com/mahe/springkafka/customer/publisher/api/KafkaApi.java
@@ -33,6 +33,8 @@ public interface KafkaApi {
   default ResponseEntity<?> customer(
       @ApiParam(value = "customer object that needs to be post to kafka",
           required = true) @Valid @RequestBody Customer body,
+      @ApiParam(value = "Authorization token", required = true) @RequestHeader(
+          value = "Authorization", required = true) String authorization,
       @ApiParam(value = "") @RequestHeader(value = "Application-Id",
           required = false) String applicationId,
       @ApiParam(value = "") @RequestHeader(value = "Activity-Id",
