# cloudkafka-producer/src/main/java/com/mahe/springkafka/customer/publisher/security/JwtRequestFilter.java
@@ -1,0 +1,66 @@
+package com.mahe.springkafka.customer.publisher.security;
+
+import java.io.IOException;
+import javax.servlet.FilterChain;
+import javax.servlet.ServletException;
+import javax.servlet.http.HttpServletRequest;
+import javax.servlet.http.HttpServletResponse;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
+import org.springframework.stereotype.Component;
+import org.springframework.web.filter.OncePerRequestFilter;
+import com.mahe.springkafka.customer.publisher.security.util.JwtUtil;
+import com.mahe.springkafka.customer.publisher.service.AppUserDetailsService;
+
+@Component
+public class JwtRequestFilter extends OncePerRequestFilter {
+  private static final Logger LOG = LogManager.getLogger();
+
+  @Autowired
+  private JwtUtil jwtUtil;
+
+  @Autowired
+  private AppUserDetailsService userDetailsService;
+
+  @Override
+  protected void doFilterInternal(HttpServletRequest request, HttpServletResponse response,
+      FilterChain chain) throws ServletException, IOException {
+
+    final String authorizationHeader = request.getHeader("Authorization");
+
+    String username = null;
+    String jwt = null;
+
+    if (authorizationHeader != null && authorizationHeader.startsWith("Bearer ")) {
+      jwt = authorizationHeader.substring(7);
+      try {
+        username = jwtUtil.extractUsername(jwt);
+      } catch (Exception e) {
+        LOG.error(e);
+      }
+    }
+
+
+    if (username != null && SecurityContextHolder.getContext().getAuthentication() == null) {
+
+      UserDetails userDetails = this.userDetailsService.loadUserByUsername(username);
+      boolean valid = jwtUtil.validateToken(jwt, userDetails);
+
+      if (Boolean.TRUE.equals(valid)) {
+        UsernamePasswordAuthenticationToken usernamePasswordAuthenticationToken =
+            new UsernamePasswordAuthenticationToken(userDetails, null,
+                userDetails.getAuthorities());
+        usernamePasswordAuthenticationToken
+            .setDetails(new WebAuthenticationDetailsSource().buildDetails(request));
+        SecurityContextHolder.getContext().setAuthentication(usernamePasswordAuthenticationToken);
+      }
+    }
+    chain.doFilter(request, response);
+  }
+
+}
