# cloudkafka-producer/src/main/resources/swagger.yaml
@@ -17,17 +17,19 @@ schemes:
 - "http"
 
 securityDefinitions:
-  sec_auth:
-    type: oauth2
-    authorizationUrl: 'http://localhost:8181/api/oauth/dialog'
-    flow: implicit
   api_key:
     type: apiKey
-    name: api_key
+    name: Authorization
     in: header
     
     
 parameters:
+  Authorization:    
+    name: Authorization
+    in: header
+    description: Authorization token 
+    required: true
+    type: string
   Application-Id:
     name: Application-Id
     in: header
@@ -118,6 +120,7 @@ definitions:
         type: "string"
         format: "string"
         maxLength: 10
+        pattern: '^[a-zA-Z0-9]+$'
         
       firstName:
         type: "string"
@@ -142,11 +145,11 @@ definitions:
         
       countryCode:
         type: "string"
+        minLength: 2
         maxLength: 2
        
       mobileNumber:
-        type: "integer"
-        format: "int"
+        type: number
         maxLength:  10
         
       email:
